# build_tests-cmake-plain_cxx14_package

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Data.hpp  Dummy.cpp  Dummy.hpp  DummyLeast14.cpp  DummyLeast14.hpp  Main.cpp
test/: CMakeLists.txt  test_Dummy.cpp
